@@ -1,5 +1,7 @@
     CHANGED: disabled krarc ioslave because of bug 280939 resulting in data loss.
 
+    FIXED: [ 277259 ] Unselecting files before copy/move operation doesn't work in the same panel
+           this also fixes the selection of the other panel being cleared instead
     FIXED: [ 276310 ] crash when trying to delete already deleted file
     FIXED: [ 277578 ] Crash on cancelling calculation of occupied space on smb share
     FIXED: krusader hangs for some time when opening a bz2(and possibly gzip)-compressed archive
